--- a/app/views/pages/produtos.html.erb
+++ b/app/views/pages/produtos.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#produtos</h1>
-<p>Find me in app/views/pages/produtos.html.erb</p>
+<h1>Conheça nossos produtos</h1>
+
+Imagem dos produtos
+
+<p>lista de produtos</p>
+
+Catalogo de produtos para download
