--- a/app/views/pages/sobre.html.erb
+++ b/app/views/pages/sobre.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#sobre</h1>
-<p>Find me in app/views/pages/sobre.html.erb</p>
+<h1>Sobre a SIG Diamantados</h1>
+
+# embed video
+
+<div class="container-video">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u5joXp0NEyc" allowfullscreen></iframe>
+  </div>
+</div>
+
+<p>Aqui vai um baita textao sobre a empresa</p>
+
