working on collapsed navbar

--- a/app/views/pages/produtos.html.erb
+++ b/app/views/pages/produtos.html.erb
@@ -5,3 +5,7 @@ Imagem dos produtos
 <p>lista de produtos</p>
 
 Catalogo de produtos para download
+
+<%= link_to "/catalogo_sig.pdf", :target => "_blank" do %>
+  <%= image_tag('catalogo_sig_s.png', class: "img-center") %>
+<% end %>
