--- a/app/views/pages/contato.html.erb
+++ b/app/views/pages/contato.html.erb
@@ -2,48 +2,25 @@
 
 <p>Find me in app/views/pages/contato.html.erb</p>
 
+<form class="contact-form">
+<ul>
+<li>
+    <input type="text" name="field1" class="field-style field-split align-left" placeholder="Name" />
+    <input type="email" name="field2" class="field-style field-split align-right" placeholder="Email" />
 
-<div class="container">
-	<div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <div class="well well-sm">
-          <form class="form-horizontal" action="" method="post">
-          <fieldset>
-            <legend class="text-center">Contact us</legend>
-    
-            <!-- Name input-->
-            <div class="form-group">
-              <label class="col-md-3 control-label" for="name">Name</label>
-              <div class="col-md-9">
-                <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
-              </div>
-            </div>
-    
-            <!-- Email input-->
-            <div class="form-group">
-              <label class="col-md-3 control-label" for="email">Your E-mail</label>
-              <div class="col-md-9">
-                <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
-              </div>
-            </div>
-    
-            <!-- Message body -->
-            <div class="form-group">
-              <label class="col-md-3 control-label" for="message">Your message</label>
-              <div class="col-md-9">
-                <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
-              </div>
-            </div>
-    
-            <!-- Form actions -->
-            <div class="form-group">
-              <div class="col-md-12 text-right">
-                <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-              </div>
-            </div>
-          </fieldset>
-          </form>
-        </div>
-      </div>
-	</div>
-</div>
+</li>
+<li>
+    <input type="text" name="field3" class="field-style field-split align-left" placeholder="Phone" />
+    <input type="url" name="field4" class="field-style field-split align-right" placeholder="Website" />
+</li>
+<li>
+<input type="text" name="field3" class="field-style field-full align-none" placeholder="Subject" />
+</li>
+<li>
+<textarea name="field5" class="field-style" placeholder="Message"></textarea>
+</li>
+<li>
+<input type="submit" value="Send Message" />
+</li>
+</ul>
+</form>
