--- a/app/views/pages/contato.html.erb
+++ b/app/views/pages/contato.html.erb
@@ -1,26 +1,38 @@
+
+
 <h1>Pages#contato</h1>
 
 <p>Find me in app/views/pages/contato.html.erb</p>
 
-<form class="contact-form">
-<ul>
-<li>
-    <input type="text" name="field1" class="field-style field-split align-left" placeholder="Name" />
-    <input type="email" name="field2" class="field-style field-split align-right" placeholder="Email" />
 
-</li>
-<li>
-    <input type="text" name="field3" class="field-style field-split align-left" placeholder="Phone" />
-    <input type="url" name="field4" class="field-style field-split align-right" placeholder="Website" />
-</li>
-<li>
-<input type="text" name="field3" class="field-style field-full align-none" placeholder="Subject" />
-</li>
-<li>
-<textarea name="field5" class="field-style" placeholder="Message"></textarea>
-</li>
-<li>
-<input type="submit" value="Send Message" />
-</li>
-</ul>
-</form>
+<div class="formulario">
+    <form class="contact-form">
+    <ul>
+    <li>
+        <input type="text" name="field1" class="field-style field-full align-left" placeholder="Nome" />
+    </li>
+    <li>
+        <input type="email" name="field2" class="field-style field-full align-right" placeholder="Email" />
+
+    </li>
+    <li>
+        <input type="text" name="field3" class="field-style field-full align-left" placeholder="Telefone" />
+    </li>
+    <li>
+    <input type="text" name="field3" class="field-style field-full align-none" placeholder="Assunto" />
+    </li>
+    <li>
+    <textarea name="field5" class="field-style" placeholder="Escreva sua mensagem"></textarea>
+    </li>
+    <li>
+    <input type="submit" value="Enviar" />
+    </li>
+    </ul>
+    </form>
+
+    <div class="mapa">
+        <%= link_to "https://goo.gl/maps/uhPSoHe2X9ZF5E1g6", :target => "_blank" do %>
+            <%= image_tag ('mapa.png') %>
+        <% end %>
+    </div>
+</div>
