--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
   </head>
   <body>
 <nav class="navbar navbar-expand-lg">
-  <a class="navbar-brand" href="#"><%= image_tag("diamond_s.png") %> SIG Diamantados </a>
+  <!-- <a class="navbar-brand" href="#"><%= image_tag("diamond_s.png") %> SIG Diamantados </a> -->
+    <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag ('diamond_s.png') %>
+      SIG Diamantados
+    <% end %>
     <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
