change carousel properties and add whatsappp icon

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,5 +1,22 @@
-#carouselExampleCaptions {
+.carousel {
   background-color: yellowgreen;
-  width: 75%;
+  width: 80%;
+  height: 320px;
   margin: 10px auto;
+}
+
+.image-xs {
+  display: block;
+  margin: auto;
+}
+
+@media (max-width: 375px) {
+  .carousel {
+    display: none;
+  }
+}
+@media (min-width: 376px) {
+  .image-xs {
+    display: none;
+  }
 }
