--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,9 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
-
 # adicionar imagem ou carrossel
-
 <h1>Sig Diamantados</h1>
-
 <p>Texto de descricao</p>
-
+<%= image_tag("tools.jpeg", class: "image-xs") %>
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -22,7 +19,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag("banner2.jpeg") %> 
+      <%= image_tag("banner2.jpeg") %>
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
