--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,12 +1,8 @@
 .footer {
-  background: #F4F4F4;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 100px;
-  padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  background-color: $blue-sig;
+  color: white;
 }
+
 .footer-links {
   display: flex;
   align-items: center;
@@ -21,6 +17,14 @@
 .footer-links a:hover {
   opacity: 1;
 }
-.footer .fa-heart {
-  color: #D23333;
+
+.social {
+  font-size: 50px;
 }
+
+
+// .list-unstyled li p {
+//   .fas {
+//     width: 300px;
+//   }
+// }
