--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <div class="about">
-  <h1>Sig Diamantados</h1>
+  <h2>Sig Diamantados</h2>
 
   <p>A Empresa SIG DIAMANTADOS, nasceu de uma vontade enorme de dar o melhor atendimento possivel para a área da construção civil, empresas de pisos industriais, locadoras de equipamentos e revendedores de ferramentas diamantadas de alta performance e qualidade que precisam de um atendimento técnico  e orientações sobre ferramentas utilizadas de forma correta nos servicos executados, visando proporcionar ao cliente  o melhor rendimento e produção das ferramentas. Hoje, dirigida e administrada por Igor de Almeida, com mais de 22 anos dedicados a esta área e com uma vasta experiência em ferramentas Diamantadas, vem para revolucionar o mercado com atendimento técnico, presteza e agilidade.
   </p>
@@ -17,8 +17,8 @@
     <div class="carousel-item active">
       <%= image_tag("banner1.jpeg") %>
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        <!-- <h5>First slide label</h5>
+        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
       </div>
     </div>
     <div class="carousel-item">
