--- a/app/views/pages/sobre.html.erb
+++ b/app/views/pages/sobre.html.erb
@@ -1,6 +1,6 @@
-<h1>Sobre a SIG Diamantados</h1>
+<!-- # embed video -->
 
-# embed video
+<%= image_tag 'banner2.jpeg' %>
 
 <div class="container-video">
   <div class="embed-responsive embed-responsive-16by9">
@@ -8,5 +8,10 @@
   </div>
 </div>
 
-<p>A Empresa SIG DIAMANTADOS, nasceu de uma vontade enorme de dar o melhor atendimento possivel para a área da construção civil, empresas de pisos industriais, locadoras de equipamentos e revendedores de ferramentas diamantadas de alta performance e qualidade que precisam de um atendimento técnico  e orientações sobre ferramentas utilizadas de forma correta nos servicos executados, visando proporcionar ao cliente  o melhor rendimento e produção das ferramentas. Hoje, dirigida e administrada por Igor de Almeida, com mais de 22 anos dedicados a esta área e com uma vasta experiência em ferramentas Diamantadas, vem para revolucionar o mercado com atendimento técnico, presteza e agilidade.</p>
+<div class="about">
+  <h2>Sig Diamantados</h2>
+
+  <p>A Empresa SIG DIAMANTADOS, nasceu de uma vontade enorme de dar o melhor atendimento possivel para a área da construção civil, empresas de pisos industriais, locadoras de equipamentos e revendedores de ferramentas diamantadas de alta performance e qualidade que precisam de um atendimento técnico  e orientações sobre ferramentas utilizadas de forma correta nos servicos executados, visando proporcionar ao cliente  o melhor rendimento e produção das ferramentas. Hoje, dirigida e administrada por Igor de Almeida, com mais de 22 anos dedicados a esta área e com uma vasta experiência em ferramentas Diamantadas, vem para revolucionar o mercado com atendimento técnico, presteza e agilidade.
+  </p>
+</div>
 
