--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,7 +102,7 @@
         <h5 class="font-weight-bold text-uppercase mb-4">Acompanhe</h5>
 
         <!-- Facebook -->
-        <a type="button" class="social btn-floating btn-fb">
+        <a type="button" href="https://www.facebook.com/sig.diamantados" target="_blank" class="social btn-floating btn-fb">
           <i class="fab fa-facebook-f"></i>
         </a>
         <!-- Twitter -->
