--- a/app/views/pages/produtos.html.erb
+++ b/app/views/pages/produtos.html.erb
@@ -1,18 +1,25 @@
-<h1>Conheça nossos produtos</h1>
-
-Imagem dos produtos
-
-<p>lista de produtos</p>
+<!-- <h2>Produtos</h2> -->
 
 <div class="texto-sobre">
   <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem vel commodi eaque incidunt accusamus, aliquid at velit iste provident veritatis nihil tempora ratione facilis molestiae perferendis. Quaerat soluta nisi nulla odit dicta laborum in nostrum, tempore minima laudantium earum alias, pariatur neque est recusandae sapiente aut perspiciatis beatae odio! Harum ad accusamus ipsam iusto hic culpa placeat libero neque ut ducimus! Omnis illum, temporibus dolores, recusandae ea atque maiores dolore nostrum odio debitis aspernatur soluta officiis fuga esse ut aut sed. Amet expedita sunt ex quos dolor recusandae soluta deleniti quae libero dignissimos at hic maiores culpa voluptas cum, neque sint quam temporibus accusantium! Vero repellat sint unde molestiae possimus earum adipisci, accusamus id incidunt cum distinctio porro quis quasi dicta rerum necessitatibus corrupti aspernatur est consequuntur in praesentium? Sit id corrupti aliquam. Doloremque nihil similique ex quidem exercitationem sapiente autem saepe, excepturi beatae, nostrum incidunt vero perspiciatis inventore omnis perferendis animi officiis sequi. Possimus esse sint saepe incidunt quam illum deleniti architecto facilis excepturi, dolorem fuga sit perferendis, neque ipsa. Nemo quisquam aliquid id earum impedit magnam enim voluptatibus magni exercitationem aperiam voluptatum, ratione consectetur officia illo cum saepe sint nihil! Necessitatibus esse doloribus deserunt eum sapiente officiis, dolorem ex provident quod eius hic, molestias dolores ad reprehenderit cumque, quasi nostrum voluptate earum! Blanditiis excepturi vitae dolorem tempora at numquam nostrum ipsum cupiditate delectus pariatur sed repellat, rem nemo molestiae eos cum quas! Molestiae autem quae error, neque veniam omnis quis perspiciatis, non nobis dicta ducimus laborum vitae fugit porro sit consequatur aliquam illum aperiam praesentium. Autem in nostrum, omnis, dignissimos ducimus deleniti nesciunt assumenda doloremque, placeat aspernatur eos! Suscipit cumque laborum libero. Expedita vero qui numquam magnam voluptas fugiat tenetur voluptates, nam perferendis repellat iste beatae optio architecto impedit dolor, ab doloremque at aliquid facere asperiores dolores reprehenderit aperiam unde! A magni amet, optio id odio adipisci iste distinctio, voluptatibus voluptates temporibus necessitatibus rerum dignissimos ipsam impedit quisquam fugit enim nesciunt? Asperiores, illo minima pariatur voluptatem consequuntur quibusdam in fugiat aliquid maxime culpa quaerat, quae cupiditate distinctio nisi ex veritatis ducimus vel delectus veniam maiores beatae. Exercitationem vero, harum, deserunt impedit reprehenderit commodi dolor placeat eligendi rerum possimus voluptate molestiae cumque beatae id iste accusantium accusamus ipsum corrupti. Accusantium labore aperiam facere? Atque, laborum ut? Soluta eligendi quas, culpa dolores assumenda dicta sunt facilis ut vel eius illum vero inventore quisquam maxime numquam debitis consequatur autem quos laboriosam?
+    A Empresa SIG DIAMANTADOS, nasceu de uma vontade enorme de dar o melhor atendimento possivel para a área da construção civil, empresas de pisos industriais, locadoras de equipamentos e revendedores de ferramentas diamantadas de alta performance e qualidade que precisam de um atendimento técnico  e orientações sobre ferramentas utilizadas de forma correta nos servicos executados, visando proporcionar ao cliente  o melhor rendimento e produção das ferramentas. Hoje, dirigida e administrada por Igor de Almeida, com mais de 22 anos dedicados a esta área e com uma vasta experiência em ferramentas Diamantadas, vem para revolucionar o mercado com atendimento técnico, presteza e agilidade.
   </p>
 </div>
 
 <div class="catalogo">
-  <h3>Catálogo de produtos para download</h3>
+  <h3>Confira nosso catálogo</h3>
   <%= link_to "/catalogo_sig.pdf", :target => "_blank" do %>
     <%= image_tag('catalogo_sig_s.png') %>
   <% end %>
+</div>
+
+<div class="parceiros">
+  <h3>Parceiros</h3>
+  <div class="parceiros-grid">
+    <ul>
+      <%= image_tag('parceiro_finiti.png') %>
+      <%= image_tag('parceiro_jahu.png') %>
+      <%= image_tag('parceiro_reis.jpg', size: "100x170") %>
+    </ul>
+  </div>
 </div>
