--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,9 @@
-
 <div class="about">
   <h2>Sig Diamantados</h2>
-
   <p>A Empresa SIG DIAMANTADOS, nasceu de uma vontade enorme de dar o melhor atendimento possivel para a área da construção civil, empresas de pisos industriais, locadoras de equipamentos e revendedores de ferramentas diamantadas de alta performance e qualidade que precisam de um atendimento técnico  e orientações sobre ferramentas utilizadas de forma correta nos servicos executados, visando proporcionar ao cliente  o melhor rendimento e produção das ferramentas. Hoje, dirigida e administrada por Igor de Almeida, com mais de 22 anos dedicados a esta área e com uma vasta experiência em ferramentas Diamantadas, vem para revolucionar o mercado com atendimento técnico, presteza e agilidade.
   </p>
 </div>
-
-<%= image_tag("tools.jpeg", class: "image-xs") %>
+<%= image_tag("tools.jpg", class: "image-xs") %>
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
