--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,14 +12,14 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag("banner1.jpeg") %>
+      <%= image_tag("banner1.jpg") %>
       <div class="carousel-caption d-none d-md-block">
         <!-- <h5>First slide label</h5>
         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag("banner2.jpeg") %>
+      <%= image_tag("banner2.jpg") %>
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
