change from jpeg to jpg the image_tag -> sobre file

--- a/app/views/pages/sobre.html.erb
+++ b/app/views/pages/sobre.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag 'banner2.jpeg' %>
+<%= image_tag 'banner2.jpg' %>
 <div class="container-video">
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u5joXp0NEyc" allowfullscreen></iframe>
