--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,5 +1,5 @@
 .carousel {
-  background-color: yellowgreen;
+  // background-color: yellowgreen;
   width: 80%;
   height: 320px;
   margin: 10px auto;
