--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="about">
   <h2>Sig Diamantados</h2>
-  <p>A Empresa SIG DIAMANTADOS, nasceu de uma vontade enorme de dar o melhor atendimento possivel para a área da construção civil, empresas de pisos industriais, locadoras de equipamentos e revendedores de ferramentas diamantadas de alta performance e qualidade que precisam de um atendimento técnico  e orientações sobre ferramentas utilizadas de forma correta nos servicos executados, visando proporcionar ao cliente  o melhor rendimento e produção das ferramentas. Hoje, dirigida e administrada por Igor de Almeida, com mais de 22 anos dedicados a esta área e com uma vasta experiência em ferramentas Diamantadas, vem para revolucionar o mercado com atendimento técnico, presteza e agilidade.
+  <p>A Empresa SIG DIAMANTADOS, nasceu de uma vontade enorme de dar o melhor atendimento possivel para a área da construção civil, empresas de pisos industriais, locadoras de equipamentos e revendedores de ferramentas diamantadas de alta performance e qualidade que precisam de orientações sobre ferramentas utilizadas de forma correta nos servicos executados, visando proporcionar ao cliente  o melhor rendimento e produção das ferramentas. Hoje, dirigida e administrada por Igor de Almeida, com mais de 22 anos dedicados a esta área e com uma vasta experiência em ferramentas Diamantadas, vem para revolucionar o mercado com atendimento técnico, presteza e agilidade.
   </p>
 </div>
 <%= image_tag("tools.jpg", class: "image-xs") %>
@@ -8,30 +8,30 @@
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    <%# <li data-target="#carouselExampleCaptions" data-slide-to="2"></li> %>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag("banner1.jpg") %>
+      <%= image_tag("bannerA.jpg", size: "1200x300") %>
       <div class="carousel-caption d-none d-md-block">
         <!-- <h5>First slide label</h5>
         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag("banner2.jpg") %>
+      <%= image_tag("bannerB.jpg", size: "1200x300") %>
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <!-- <h5>Second slide label</h5> -->
+        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
       </div>
     </div>
-    <div class="carousel-item">
+    <!-- <div class="carousel-item">
       <%= image_tag("banner3.jpg") %>
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
       </div>
-    </div>
+    </div> -->
   </div>
   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
