--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -8,6 +8,11 @@ body {
   margin: 20px auto;
 }
 
+.container-img-sobre {
+  width: 75%;
+  margin: 20px auto;
+}
+
 .about {
   width: 80%;
   margin: auto;
@@ -19,10 +24,14 @@ body {
   margin: 20px auto;
 }
 
-.container-video {
-  margin: 30px auto;
-}
-
 .mapa img {
   margin-bottom: 20px;
+}
+
+.parceiros {
+  width: 75%;
+  margin: 30px auto;
+  h3 {
+    font-weight: bold;
+  }
 }
