--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-expand-lg">
   <!-- <a class="navbar-brand" href="#"><%= image_tag("diamond_s.png") %> SIG Diamantados </a> -->
     <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag ('diamond_s.png') %>
+      <%= image_tag('siglogo.jpeg', size: "40x35") %>
       SIG Diamantados
     <% end %>
     <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,89 +41,46 @@
   </div>
 </nav>    
     <%= yield %>
-<!-- <div class="footer">
-  <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
-  </div>
-  <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> at Le Wagon
-  </div>
-</div> -->
 
-<!-- Footer -->
-<footer class="footer page-footer font-small mdb-color lighten-3 pt-4">
-
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left">
-
-    <!-- Grid row -->
-    <div class="row">
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
-
-        <!-- Contact details -->
-        <h5 class="font-weight-bold text-uppercase mb-4">Endereço</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <p><i class="fas fa-home mr-3"></i> Rua Belford Duarte, 870 </p>
-              <p>Cep. 04375-000 - SP</p>
-          </li>
-          <li>
-            <p>
-              <i class="fas fa-envelope"></i> contato@sigdiamantados.com.br</p>
-          </li>
-          <li>
-            <p>
-              <i class="fas fa-phone mr-3"></i> +55 11 99757 2346</p>
-          </li>
-          <!-- <li>
-            <p>
-              <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-          </li> -->
-        </ul>
-
+<!-- Footer MANUAL -->
+<div class="footer">
+  <div class="rodapea">
+    <h6 class="rodape-title">CONTATO</h6>
+    <div class="icon-info">
+      <i class="fas fa-home"></i> 
+      <div class="endereco">     
+        <p>Rua Lucrécia Maciel, 344 Jabaquara </p>
+        <p>São Paulo SP CEP 04314-130</p>
       </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
-
-        <!-- Social buttons -->
-        <h5 class="font-weight-bold text-uppercase mb-4">Acompanhe</h5>
-
-        <!-- Facebook -->
-        <a type="button" href="https://www.facebook.com/sig.diamantados" target="_blank" class="social btn-floating btn-fb">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <!-- Twitter -->
-        <a type="button" class="social btn-floating btn-tw">
-          <i class="fab fa-twitter"></i>
-        </a>
-      </div>
-      <!-- Grid column -->
     </div>
-    <!-- Grid row -->
+    <div class="icon-info">
+      <i class="far fa-envelope"></i>
+      <p>contato@sigdiamantados.com.br</p>
+    </div>
+    <div class="icon-info">
+      <i class="fas fa-phone-volume"></i>
+      <div class="endereco">
+        <p>+55 11 2386-5763</p>
+        <p>+55 11 99757 2346</p>
+      </div>
+    </div>
   </div>
-  <!-- Footer Links -->
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Direitos Reservados: SIG Diamantados
-    <!-- <a href="https://mdbootstrap.com/"> MDBootstrap.com</a> -->
-  </div>
-  <!-- Copyright -->
+  <div class="rodapeb">
+    <h6 class="rodape-title">ACOMPANHE</h6>
 
+    <!-- Facebook -->
+    <a type="button" href="https://www.facebook.com/sig.diamantados" target="_blank" class="social">
+    <i class="fab fa-facebook-f"></i>
+    </a>
+    <!-- Youtube -->
+    <a type="button" href="https://www.youtube.com/channel/UCmWOobiXM61qx4fIXLvUk4g" target="_blank" class="social">
+    <i class="fab fa-youtube-square"></i>
+    </a>
+  </div>
+</div>
+<div class="footer-copyright text-center py-3">© 2020 SIG Diamantados. Todos os direitos reservados. CNPJ nº 64.180.128/0001-67
+</div>
 </footer>
-<!-- Footer -->
-
     <%= javascript_include_tag 'application' %>
 
     <%= javascript_pack_tag 'application' %>
