--- a/app/views/pages/contato.html.erb
+++ b/app/views/pages/contato.html.erb
@@ -1,4 +1,6 @@
-<h2>Entre em contato para saber mais!</h2>
+<div class="about">
+  <h2>Entre em contato para saber mais!</h2>
+</div>
 
 <div class="formulario">
   <form class="contact-form">
