--- a/app/views/pages/contato.html.erb
+++ b/app/views/pages/contato.html.erb
@@ -38,7 +38,7 @@
     <%= f.input :name, label: false, placeholder: "Nome" %>
     <%= f.input :email, label: false, placeholder: "Email" %>
     <%= f.input :phone, required: false, label: false, placeholder: "Telefone" %>
-    <%= f.input :message, label: false, placeholder: "Escreva sua mensagem" %>
+    <%= f.input :message, as: :text, input_html: {rows: 10, cols: 10}, label: false, placeholder: "Escreva sua mensagem" %>
     <%# <%= f.submit value: t('.send'), class: 'btn btn-dark float-right' %>
     <%# <%= f.button :submit, 'Enviar', class: "send_button" %>
     <%= f.button :submit, "Enviar", class: "btn btn-dark" %>
