change .jpeg to .jpg

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg">
       <!-- <a class="navbar-brand" href="#"><%= image_tag("diamond_s.png") %> SIG Diamantados </a> -->
       <%= link_to root_path, class: "navbar-brand" do %>
-        <%= image_tag('siglogo.jpeg', size: "40x35") %>
+        <%= image_tag('siglogo.jpg', size: "40x35") %>
         SIG Diamantados
       <% end %>
       <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
