--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
+    <%= render 'shared/flashes' %>
     <nav class="navbar navbar-expand-lg">
       <!-- <a class="navbar-brand" href="#"><%= image_tag("diamond_s.png") %> SIG Diamantados </a> -->
       <%= link_to root_path, class: "navbar-brand" do %>
