--- a/app/views/pages/contato.html.erb
+++ b/app/views/pages/contato.html.erb
@@ -21,6 +21,6 @@
     <%# --- %>
   </div>
 </div>
-<%= link_to "http://api.whatsapp.com/send?1=pt_BR&phone=5511997572346", :target => "_blank", class:"whats" do %>
-  <%= image_tag('waa.png', size: '50x50') %>
-<% end %>
+<%#= link_to "http://api.whatsapp.com/send?1=pt_BR&phone=5511997572346", :target => "_blank", class:"whats" do %>
+  <%#= image_tag('waa.png', size: '50x50') %>
+  <%# end %>
