add images to sobre page

--- a/app/views/pages/sobre.html.erb
+++ b/app/views/pages/sobre.html.erb
@@ -3,11 +3,10 @@
   <p>A Empresa SIG DIAMANTADOS, nasceu de uma vontade enorme de dar o melhor atendimento possivel para a área da construção civil, empresas de pisos industriais, locadoras de equipamentos e revendedores de ferramentas diamantadas de alta performance e qualidade que precisam de orientações sobre ferramentas utilizadas de forma correta nos servicos executados, visando proporcionar ao cliente  o melhor rendimento e produção das ferramentas. Hoje, dirigida e administrada por Igor de Almeida, com mais de 22 anos dedicados a esta área e com uma vasta experiência em ferramentas Diamantadas, vem para revolucionar o mercado com atendimento técnico, presteza e agilidade.
   </p>
 </div>
-
 <div class="container-img-sobre">
-  <%= image_tag('bannerC.jpg', size: "500x350") %>
+  <%= image_tag('bannerA.jpg') %>
+  <%= image_tag('bannerC.jpg') %>
 </div>
-
 <div class="container-video">
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src=https://www.youtube.com/embed/7TmjBgGqbI4 allowfullscreen></iframe>
