--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -13,6 +13,11 @@ body {
   margin: 20px auto;
 }
 
+.container-img-sobre img {
+  max-width: 95%;
+  margin: 15px auto;
+}
+
 .about {
   width: 80%;
   margin: auto;
