--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,30 +10,42 @@
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <%# <li data-target="#carouselExampleCaptions" data-slide-to="2"></li> %>
+    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag("bannerA.jpg", size: "1200x300") %>
+      <%= image_tag("bannerA.jpg") %>
       <div class="carousel-caption d-none d-md-block">
-        <!-- <h5>First slide label</h5>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag("bannerB.jpg", size: "1200x300") %>
+      <%= image_tag("bannerB.jpg") %>
       <div class="carousel-caption d-none d-md-block">
-        <!-- <h5>Second slide label</h5> -->
-        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
       </div>
     </div>
-    <!-- <div class="carousel-item">
-      <%= image_tag("banner3.jpg") %>
+    <div class="carousel-item">
+      <%= image_tag("fotoa.jpg") %>
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
       </div>
-    </div> -->
+    </div>
+    <div class="carousel-item">
+      <%= image_tag("fotob.jpg") %>
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag("fotoc.jpg") %>
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag("fotod.jpg") %>
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
