--- a/app/views/pages/produtos.html.erb
+++ b/app/views/pages/produtos.html.erb
@@ -1,18 +1,15 @@
 <!-- <h2>Produtos</h2> -->
-
 <div class="texto-sobre">
   <p>
     A Empresa SIG DIAMANTADOS, nasceu de uma vontade enorme de dar o melhor atendimento possivel para a área da construção civil, empresas de pisos industriais, locadoras de equipamentos e revendedores de ferramentas diamantadas de alta performance e qualidade que precisam de orientações sobre ferramentas utilizadas de forma correta nos servicos executados, visando proporcionar ao cliente  o melhor rendimento e produção das ferramentas. Hoje, dirigida e administrada por Igor de Almeida, com mais de 22 anos dedicados a esta área e com uma vasta experiência em ferramentas Diamantadas, vem para revolucionar o mercado com atendimento técnico, presteza e agilidade.
   </p>
 </div>
-
 <div class="catalogo">
   <h3>Confira nosso catálogo</h3>
-  <%= link_to "/catalogo_sig2.pdf", :target => "_blank" do %>
+  <%= link_to "/catalogo_sig.pdf", :target => "_blank" do %>
     <%= image_tag('catalogo2.png', size: "275x350") %>
-  <% end %> 
-</div> 
-
+  <% end %>
+</div>
 <div class="parceiros">
   <h3>Parceiros</h3>
   <div class="parceiros-grid">
