--- a/app/views/pages/contato.html.erb
+++ b/app/views/pages/contato.html.erb
@@ -19,6 +19,10 @@
       <% end %>
     </div>
     <%# --- %>
+    <div class="cartoes">
+      <h4>Aceitamos os cartões:</h4>
+      <%= image_tag("cards.jpeg", size: "300x400") %>
+    </div>
   </div>
 </div>
 <%= link_to "http://api.whatsapp.com/send?1=pt_BR&phone=5511997572346", :target => "_blank", class:"whats" do %>
