--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,6 +25,13 @@
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
       </div>
     </div>
+    <div class="carousel-item">
+      <%= image_tag("bannerfront.jpeg", size: "1200x300") %>
+      <div class="carousel-caption d-none d-md-block">
+        <!-- <h5>Second slide label</h5> -->
+        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
+      </div>
+    </div>
     <!-- <div class="carousel-item">
       <%= image_tag("banner3.jpg") %>
       <div class="carousel-caption d-none d-md-block">
