--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag("bannerA.jpg") %>
+      <%= image_tag("bannerfront.jpeg") %>
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
