--- a/app/views/pages/contato.html.erb
+++ b/app/views/pages/contato.html.erb
@@ -21,7 +21,7 @@
     <%# --- %>
     <div class="cartoes">
       <h4>Aceitamos os cartões:</h4>
-      <%= image_tag("cards.jpeg", size: "300x400") %>
+      <%= image_tag("cards.jpg", size: "300x400") %>
     </div>
   </div>
 </div>
